jvm/src/main/java/com/example/error/MethodException.java
package com.example.error;

/**
 * lingfan
 * 2019-12-20 11:41
 */
public class MethodException {


}
